<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Github User\'s</string>

    <string name="share">Share</string>
    <string name="name" tools:ignore="UnusedResources">Name \n</string>
    <string name="username">Username \n</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="company">Company \n</string>
    <string name="location">Location \n</string>
    <string name="repository">Repository \n</string>
    <string name="link">GitHub Link</string>
    <string name="search">Search</string>
    <string name="avatar">Avatar</string>
    <string name="favorite">Favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="favorite_clear"> has been removed from favorites</string>
    <string name="add_favorite"> has been added to favorites</string>
    <string name="open_link">Open user details in browser</string>
    <string name="alert_clear">Are you sure you want to remove %s from your favorites list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete %s</string>
    <string name="language">Change Language Settings</string>
    <string name="appearance">Appearance</string>
</resources>